changed back icon spacing until mobile fixed

--- a/app/static/css/styles_updated.css
+++ b/app/static/css/styles_updated.css
@@ -62,7 +62,7 @@ nav {
 
 .icon-div {
   text-align: center;
-  margin-top: -100px;
+  padding: 20px;
 }
 
 .icon-link {
